scss/base.scss
// Font imports 
@import url('https://fonts.googleapis.com/css?family=Reem+Kufi|Source+Sans+Pro');

$SOURCE_SANS: "Source Sans Pro", Helvetica, Arial, sans-serif;
$REEM_KUFI: "Reem Kufi", Helvetica, Arial, sans-serif;
// Some CSS Resets
html, 
body {
  font-family: $SOURCE_SANS;
  font-size: 100%;
  margin: 0;
  padding: 0;
  color: $GRAY_1;
  background-color: $PURPLE_1;
}
// Some global styles
h1,
h2,
h3,
h4 {
  font-family: $REEM_KUFI;
}
a {
  color: $BLUE_1;
  border-bottom: 2px solid;

  &:hover {
    text-decoration: none;
  }
}
.sd-white-bg {
  background-color: $WHITE;
}
// Todo: externalize these into different files
// Button styles
.sd-button {
  // Todo: semibold
  width: 216px;
  line-height: 54px;
  font-size: 24px;
  letter-spacing: 1px;
  text-transform: uppercase;
  padding: 0;
  border-radius: 10px;
  background-color: $BLUE_1;
  font-family: $REEM_KUFI;

  // Override foundation button hover behavior
  &:hover,
  &:focus {
    background-color: $BLUE_1;
  }
  &.success {
    background-color: $GREEN_1;

    &.success:hover,
    &.success:focus {
      background-color: $GREEN_1;
    }
  }
  &--input {
    text-align: left;
    text-transform: none;
    padding-left: 10px;
    padding-right: 10px;
    background-color: $BLUE_1;


    &::-webkit-input-placeholder { /* Chrome/Opera/Safari */
      color: $WHITE;
      text-align: center;
      text-transform: uppercase;
    }
    &::-moz-placeholder { /* Firefox 19+ */
      color: $WHITE;
      text-align: center;
      text-transform: uppercase;
    }
    &:-ms-input-placeholder { /* IE 10+ */
      color: $WHITE;
      text-align: center;
      text-transform: uppercase;
    }
    &:-moz-placeholder { /* Firefox 18- */
      color: $WHITE;
      text-align: center;
      text-transform: uppercase;
    }
    &:focus {
      background-color: $WHITE;
      color: $BLUE_1;

      &::-webkit-input-placeholder { /* Chrome/Opera/Safari */
        color: $BLUE_1;
      }
      &::-moz-placeholder { /* Firefox 19+ */
        color: $BLUE_1;
      }
      &:-ms-input-placeholder { /* IE 10+ */
        color: $BLUE_1;
      }
      &:-moz-placeholder { /* Firefox 18- */
        color: $BLUE_1;
      }
    }
  }

  &--short {
    line-height: 45px;
  }
}
// Overall styles
.sd-section {
  position: relative;

  &.row,
  .row {
    max-width: 90rem;
  }
  .row {
    @media screen and (min-width: $BP_XL) {
      padding-left: 6rem;
      padding-right: 6rem;
    }
  }
  .row.sd-white-bg {
    @media screen and (min-width: $BP_MD) {
      padding-top: 75px;
    }
  }
  &--content {
    @media screen and (min-width: $BP_LG) {
      min-height: 600px;
      display: flex;
      flex-direction: column;
      justify-content: center;
    }
  }
  &--header {
    font-size: 54px;
    letter-spacing: 1.5px;
    color: $BLUE_1;

    @media screen and (max-width: $BP_MD) {
      margin-top: 60px;
    }
  }
  &--subheader {
    font-size: 36px;
    letter-spacing: 1px;
    color: $BLUE_1;
  }
  p, 
  li {
    font-size: 26px;
    line-height: 1.4;
  }
}
.sd-list {
  list-style-type: none;
  margin-left: 0;

  &--hoz {
    display: inline-block;
  }
}
.sd-schedule {
  @media screen and (min-width: $BP_LG) {
    margin-top: 8rem;
  }
  &--list {
    font-family: $REEM_KUFI;
    letter-spacing: 1px;
    margin: 10px 0 20px 0;

    li {
      margin-bottom: 14px;
      position: relative;
      height: 40px;
    }
  }
  &--list-time {
    font-weight: bold;
    position: absolute;
    color: $PURPLE_1;
    left: 0;
  }
  &--list-content {
    position: absolute;
    left: 250px;
    display: block;
  }
  @media screen and (max-width: $BP_XL) {
    li {
      height: auto;
    }
    &--list-time,
    &--list-content {
      line-height: 30px;
      display: block;
      position: static;
    }
  }
}
.sd-faq {
  &--list {
    li {
      margin: 26px 0;
    }
  }
}
.sd-pad-top {
  padding-top: 4vh;
}
.sd-z1 {
  z-index: 1;
}
.tesc-logo {
  width: 8.5rem;
  margin: 2rem auto;
  display: block;

  @media screen and (min-width: $BP_MD) {
    position: absolute;
    right: 50px;
    top: -50px;
    margin: 0;
  }
  @media screen and (max-width: $BP_MD) {
    width: 7rem;
  }
}
.sd-header--small {
  font-size: 42px;
  line-height: 0;
  margin: 0;
}
// #resources .row>div {
//   @media screen and (max-width: $BP_MD) {
//     max-width: 500px;
//     margin: 30px auto;
//     float: none;
//   }
// }
.sd-link-top {
  position: fixed;
  bottom: 50px;
  left: 50px;
  color: #fff;
  z-index: 4;
  border: none;
  display: none;
  text-align: center;

  i {
    font-size: 48px;
  }
  @media screen and (max-width: $BP_MD) {
    color: white;
  }
  @media screen and (max-width: $BP_XL) {
    position: absolute;
    bottom: 28px;
    left: 10px;
  }
}

